[main] pass super first case